syntax = "proto3";

package espy;

message User {
  string uid = 1;
  Keys keys = 2;
}

message Keys {
  string steam_user_id = 1;
  string gog_auth_code = 2;
}
